2015-11-22  Ben Elliston  <bje@gnu.org>

	* config.sub (usage): Put usage on one line.

2015-11-19  Ben Elliston  <bje@gnu.org>

	Reported by Owen Urkov <owen@asperasoft.com>.
	* config.guess (amd64:Isilon OneFS:*:*): New.
	* config.sub (-onefs*): New.
	* testsuite/config-guess.data: Add a test case.
	* testsuite/config-sub.data: Likewise.

2015-10-21  Pavel Janík  <pavel@janik.cz>

	* config.guess (pc:*:*:*): Comment tweak.

2015-09-14  Ben Elliston  <bje@gnu.org>

	Reported by Jan Stypka <jasieek@student.agh.edu.pl>.
	* config.guess (k1om:Linux:*:*): New.
	* testsuite/config-guess.data: Add a test case.

2015-08-20  Jonas 'Sortie' Termansen  <sortie@maxsi.org>

	* config.guess (*:Sortix:*:*): New.
	* config.sub (-sortix*): New.

2015-08-18  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Sort.

2015-08-18  Rich Felker  <dalias@libc.org>
	    Ben Elliston  <bje@gnu.org>

	* config.sub: Recognise sh2eb.
	* testsuite/config-sub.data: Add test case.

2015-07-27  Albert Ou  <aou@eecs.berkeley.edu>
	    Ben Elliston  <bje@gnu.org>

	* config.sub (riscv32-*, riscv64-*): Allow company name.
	* testsuite/config-sub.data: Add test cases.

2015-07-24  Branko Drevenšek <brankod@beyondsemi.com>

	* config.sub (ba): Recognise.
	* testsuite/config-sub.data: Add new tests.

2015-07-07  Tobias Illenseer <tillense@astrophysik.uni-kiel.de>

	* config.sub (sx?-*): Expand to sx*-* for new sxace CPU.

2015-07-03  宋冬生  <songdongsheng@live.cn>

	* config.guess (*:NetBSD:*:*): Use only the major release and
	minor release number in the triplet.
	* testsuite/config-guess.data: Add new tests.

2015-06-30  Alexandre Oliva  <aoliva@redhat.com>
	    Ben Elliston  <bje@gnu.org>

	* config.guess (x86_64:Linux:*:*): Output 'pc', not 'unknown'.
	* testsuite/config-guess.data: Update test case.

2015-03-08  Brion Vibber  <brion@pobox.com>

	* config.sub (asmjs): Recognize.
	* testsuite/config-sub.data: Add a test case.

2015-03-06  Ed Schouten  <ed@80386.nl>